# react-native-secure-utils

./: .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-security-core.podspec  tsconfig.build.json  tsconfig.json
.cursor/: mcp.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  SecurityCoreJNI.cpp
android/src/main/java/com/securitycore/: SecurityCoreModule.kt  SecurityCorePackage.kt
cpp/: CMakeLists.txt  CMakeUserPresets.json  DIRECTORY_STRUCTURE.md  README.md  conanfile.txt
cpp/conan_profiles/: android_armv7_profile  android_armv8_profile  android_x86_64_profile  android_x86_profile  ios_profile
cpp/docs/: API.md  BUILD_GUIDE.md  SECURITY_FEATURES.md  SYMBOLIC_LINKS.md
cpp/include/: SecurityCore.h  WebSocketClient.h  WebSocketListener.h  frida_checker.h
cpp/scripts/: build.sh  build_android.sh  build_ios.sh  setup.sh  test.sh
cpp/src/: SecurityCore.cpp  WebSocketClient.cpp  frida_checker.cpp  root_checker.cpp
docs/: INTEGRATION_GUIDE.md  SCRIPTS.md
example/: app.json  metro.config.js  package.json
example/android/: gradle.properties  settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: SecurityCore.h  SecurityCore.mm
src/: index.tsx
